--- a/doc/tex/basics/edge-detection.tex
+++ b/doc/tex/basics/edge-detection.tex
@@ -22,7 +22,7 @@ wobei die einfachere Formel
 \begin{equation}
   \nabla I(x,y) = |(I \circ K_X)(x,y)| + |(I \circ K_Y)(x,y)|
 \end{equation}
-ebenfalls eine gute Annäherung bietet \cite[Kap.~5.2]{davies2012}.
+ebenfalls eine gute Annäherung bietet \cite[Kapitel~5.2]{davies2012}.
 
 \subsection*{Roberts-Operator}
 Der Ursprung des \surname{Roberts}-Operators \cite[S.~26]{roberts1963} ist die Kantenerkennung in technischen Strichzeichnungen.
@@ -57,7 +57,7 @@ Der \surname{Prewitt}-Operator \cite[S.~108]{prewitt1070} erzeugt bereits dicker
 \end{equation}
 
 \subsection*{Sobel-Operator}
-Der \surname{Sobel}-Operator \cite[Kap.~5.2]{davies2012} unterscheidet sich kaum vom \surname{Prewitt}-Operator.
+Der \surname{Sobel}-Operator \cite[Kapitel~5.2]{davies2012} unterscheidet sich kaum vom \surname{Prewitt}-Operator.
 Jedoch ist er bereits empfindlicher gegenüber Rauschen.
 \begin{equation}
   K_X = \begin{vmatrix}
@@ -74,8 +74,7 @@ Jedoch ist er bereits empfindlicher gegenüber Rauschen.
 \end{equation}
 
 \subsection*{Scharr-Operator}
-Der \surname{Scharr}-Operator \cite[Kap.~9.3]{scharr2000} ist eine Weiterentwicklung des surname{Sobel}-Operators mit besserer Rotationssymmetrie.
-Erfasst Bildrauschen jedoch noch stärker als der \surname{Sobel}-Operator.
+Der \surname{Scharr}-Operator \cite[Kapitel~9.3]{scharr2000} ist eine Weiterentwicklung des \surname{Sobel}-Operators mit besserer Rotationssymmetrie, erfasst Bildrauschen jedoch noch stärker als der \surname{Sobel}-Operator.
 \begin{equation}
   K_X = \begin{vmatrix}
      -3 & 0 &  3 \\
