add label in section techniques/region-extraction

--- a/doc/tex/techniques/region-extraction.tex
+++ b/doc/tex/techniques/region-extraction.tex
@@ -1,4 +1,5 @@
 \section{Extrahieren der Regionen und Barcodes}
+\label{sec:extraction}
 \writtenby{\dcauthornameewie}%
 %
 Die Extrahierung der Regionen und Barcodes bildet das Kernstück dieser Arbeit.
