add citation for rotating calipers

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -109,7 +109,7 @@
 
 @incollection{prewitt1070,
   author    = {Judith M. S. Prewitt},
-  year      = 1970,
+  year      = {1970},
   publisher = {Academic Press},
   title     = {Object Enhancement and Extraction},
   booktitle = {Picture processing and Psychopictorics},
@@ -118,7 +118,7 @@
 
 @phdthesis{scharr2000,
   author    = {Hanno Scharr},
-  year      = 2000,
+  year      = {2000},
   title     = {Optimale Operatoren in der Digitalen Bildverarbeitung},
   school    = {Ruprecht-Karls-Universität Heidelberg},
   url       = {http://archiv.ub.uni-heidelberg.de/volltextserver/962/}
@@ -128,7 +128,7 @@
   author    = {Nobuyuki Otsu},
   title     = {A Threshold Selection Method from Gray-Level Histograms},
   journal   = {IEEE Transactions on Systems, Man and Cybernetics},
-  year      = 1979,
+  year      = {1979},
   month     = jan,
   pages     = {62--66},
   url       = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=4310076}
@@ -175,3 +175,15 @@
   edition   = {4.},
   isbn      = {978-0-12386-908-1}
 }
+
+@techreport{arnon1983,
+  author    = {Dennis S. Arnon and
+               John P. Gieselmann},
+  title     = {A linear time algorithm for the minimum area rectangle enclosing a convex polygon},
+  institution = {Computer Science Department, Purdue University},
+  numbers   = {463},
+  year      = {1983},
+  month     = dec,
+  url       = {www.cs.purdue.edu/research/technical_reports/1983/TR\%2083-463.pdf}
+}
+
