document implementation of Extractor depencies add new class diagrams for each Extractor depency containing the interface and the default implementation

--- a/doc/tex/classes/extractor.tex
+++ b/doc/tex/classes/extractor.tex
@@ -12,4 +12,8 @@ Mit \code{Filter<Region>}~(\code{setRegionFilter()}) ist es möglich Regionen na
 Für jede gewählte Region wird mit einem \code{ImageEnhancer}~(\code{setImageEnhancer()}) der entsprechende Bildausschnitt bildtechnisch aufbereitet.
 Abschließend erfolgt unter Verwendung eines \code{BarcodeReader}~(\code{setBarcodeReader()}) das Lesen des Barcodes im n Bildausschnitt einer jeden Region sowie im gesamten Bild.
 
+\input{tex/classes/extractor/grayscaler}
+\input{tex/classes/extractor/regionextractor}
+\input{tex/classes/extractor/imageenhancer}
+\input{tex/classes/extractor/barcodereader}
 
