use a copy of barcd.xsd for source code listing because lst doesn't handle Unicode (appears within the license notice) very well

--- a/doc/tex/appendix/xml-schema.tex
+++ b/doc/tex/appendix/xml-schema.tex
@@ -1,6 +1,7 @@
-\chapter{XML Schema zur Repräsentation der Jobs und Frames}
+\chapter{XML Schema zur Repräsentation der Jobs und Extractions}
 \writtenby{\dcauthornameewie}%
 Im Folgenden ist das XML Schema für die Repräsentation der Jobs und Extractions gegeben.
 Neben der Struktur von Job und Extraction definiert das Schema alle unterstützten Barcodearten als Aufzählungstyp.
 Daher ist bei einer Erweiterung um zusätzliche Barcodes das Schema zu aktualisieren.
-\lstinputlisting[language=XSD]{../core/etc/barcd.xsd}
+\lstinputlisting[language=XSD]{src/barcd.xsd}
+
