add section classes/serialization rework introduction in classes minor text fixes

--- a/doc/hyphenation.tex
+++ b/doc/hyphenation.tex
@@ -6,6 +6,7 @@
   be-trach-te-ten
   Bild-aus-schnitt
   Ini-ti-ali-sie-rung
+  Me-tho-de
   mi-ni-mal-er
   Scan-line-ver-fahr-ens
   zu-sätz-lich-e
