--- a/doc/tex/appendix/xml-schema.tex
+++ b/doc/tex/appendix/xml-schema.tex
@@ -1,4 +1,5 @@
 \chapter{XML Schema zur Repräsentation der Jobs und Extractions}
+\label{annex:xml-schema}
 \writtenby{\dcauthornameewie}%
 Im Folgenden ist das XML Schema für die Repräsentation der Jobs und Extractions gegeben.
 Neben der Struktur von Job und Extraction definiert das Schema alle unterstützten Barcodearten als Aufzählungstyp.
