--- a/doc/tex/classes.tex
+++ b/doc/tex/classes.tex
@@ -1,10 +1,13 @@
 \chapter{Implementierung}
 \writtenby{\dcauthornameriren}%
-In diesem Kapitel werden Ausschnitte aus der Implementation beschrieben, um einen einfachen Überblick über die Funktionen zu bekommen.
+Dieses Kapitel widmet sich der Beschreibung der wesentlichen Aspekte der Implementierung.
+Dazu ist nicht jede einzelne Funktion aufgeführt, sondern nur die wichtigsten, die für das Verständnis der Verarbeitung erforderlich sind.
+Am Ende des Kapitels werden zudem die genutzten Bibliotheken beschrieben.
 
-Dabei wird nicht jede einzelne Funktion aufgeführt, sondern nur die wichtigsten für die korrekte Verarbeitung.
-
-Am Ende des Kapitels werden dann die genutzten/benötigten Bibliotheken beschrieben.
+Das hier abgebildete Diagramm zeigt die Beziehungen zwischen den zentralen Komponenten der Implementierung auf die im Folgenden einzeln eingegangen wird.
+Aus Platzgründen sind die Klassendiagramme nur auf die öffentlichen sowie geschützten Methoden beschränkt.
+Klassen, die lediglich eine Abhängigkeit darstellen und nicht Bestandteil einer Bibliothek sind, werden nur mit ihrem Namen dargestellt.
+\elasticfigure{img/uml/uml.0}{zentrale Komponenten der Implementierung und deren Beziehungen untereinander}
 
 \input{tex/classes/job}
 \input{tex/classes/extraction}
@@ -12,6 +15,7 @@ Am Ende des Kapitels werden dann die genutzten/benötigten Bibliotheken beschrie
 \input{tex/classes/barcode}
 \input{tex/classes/source}
 \input{tex/classes/extractor}
+\input{tex/classes/serialization}
 
 \input{tex/classes/imageprocessing}
 \input{tex/classes/improveimage}
