fix label of chapter appendix/proof-division.tex to use annex: prefix

--- a/doc/tex/appendix/proof-division.tex
+++ b/doc/tex/appendix/proof-division.tex
@@ -1,5 +1,5 @@
 \chapter{Beweis der ganzahligen Division durch Rechtsshift}
-\label{proof-division}
+\label{annex:proof-division}
 \writtenby{\dcauthornameewie}%
 \paragraph{Satz}
 Der Rechtsshift um $k\in\mathbb{N}_0$ Bits einer natürliche Zahl $b$ ergibt den Quotienten der ganzahligen Division von $b$ mit $2^k$.
