--- a/doc/tex/basics/grayscale.tex
+++ b/doc/tex/basics/grayscale.tex
@@ -30,7 +30,7 @@ Diese Gewichtung erfolgt auch in allen Digitalkameras deren CCD-Sensor als \text
   Y = \frac{1}{4} R + \frac{1}{2} G + \frac{1}{4}B
 \end{equation}
 Liegen die Werte $R$, $G$ und $B$ als positive ganze Zahlen vor, kann die Formel durch 3 Additionen sowie 1 Rechtsshift im Binärsystem umgesetzt werden, da die Faktoren allesamt 2er-Potenzen sind.
-Siehe Anhang \ref{proof-division} für einen Beweis.
+Siehe Anhang \ref{annex:proof-division} für einen Beweis.
 \begin{equation}
   Y = (R + G + G + B) >\!\!> 2
 \end{equation}
