fix label of section basics/grayscale

--- a/doc/tex/basics/grayscale.tex
+++ b/doc/tex/basics/grayscale.tex
@@ -1,5 +1,5 @@
 \section{Graustufen}
-\label{sec:grayscaling}
+\label{sec:grayscale}
 \writtenby{\dcauthornameewie}%
 Im Allgemeinen liegen Bilddaten in Farbe vor.
 Sind für die Analyse jedoch Strukturen entscheidend, welche sich durch Helligkeitunterschiede ergeben, so ist es nötig diese Helligkeitsinformation aus den Farbbildern zu extrahieren.
