big overall update with motivation, filter basics, barcode descriptions, classes update and evaluation update

--- a/doc/tex/barcodes.tex
+++ b/doc/tex/barcodes.tex
@@ -1,6 +1,6 @@
 \chapter{Strichcodes}
 \writtenby{\dcauthornameriren}%
-In diesem Kapitel werden erst einige Strichcodes etwas genauer beschrieben und anschließend einige Strichcodegeneratoren und -erkenner vorgestellt.
+In diesem Kapitel werden einige Beispielstrichcodes etwas genauer in ihrem Aufbau beschrieben und im Anschluss daran werden einige Strichcodegeneratoren und -erkenner vorgestellt und empirisch bewertet, um die Wahl der ZXing Bibliothek zu begründen und zusätzlich weitere Möglichkeiten für spätere Arbeiten aufzuzeigen.
 
 \input{tex/barcodes/thecodes}
 \input{tex/barcodes/libraries}
