--- a/doc/tex/classes/usedlibraries.tex
+++ b/doc/tex/classes/usedlibraries.tex
@@ -1,10 +1,9 @@
 \section{Externe Bibliotheken}
-\writtenby{\dcauthornameriren}%
-In diesem Bereich werden die Bibliotheken vorgestellt, deren Funktionen für die Strichcodeerkennung wichtig waren.
+In diesem Bereich werden die Bibliotheken kurz vorgestellt, deren Funktionen für die Strichcodeerkennung und -verbesserung wichtig sind.
 
 
 \subsection*{ZXing}
-
+Wie bereits in Kapitel \ref{sec:zxing} beschrieben, ist diese Bibliothek für das Decodieren der Strichcodes verantwortlich.
 
 
 \subsection*{BoovCV}
@@ -12,6 +11,7 @@ In diesem Bereich werden die Bibliotheken vorgestellt, deren Funktionen für die
 
 
 \subsection*{ImageJ}
+ImageJ ist ein offenes Bildbearbeitungsprogramm, dessen Bibliotheken offen nutzbar sind (Public Domain). Viele der Bildverbesserungsfunktionen des Programmes greifen auf Funktionen aus ImageJ zurück.
 
 
 
