--- a/doc/tex/classes.tex
+++ b/doc/tex/classes.tex
@@ -1,13 +1,12 @@
 \chapter{Implementierung}
-\writtenby{\dcauthornameriren}%
 Dieses Kapitel widmet sich der Beschreibung der wesentlichen Aspekte der Implementierung.
 Dazu ist nicht jede einzelne Funktion aufgeführt, sondern nur die wichtigsten, die für das Verständnis der Verarbeitung erforderlich sind.
 Am Ende des Kapitels werden zudem die genutzten Bibliotheken beschrieben.
-
 Das hier abgebildete Diagramm zeigt die Beziehungen zwischen den zentralen Komponenten der Implementierung auf die im Folgenden einzeln eingegangen wird.
 Aus Platzgründen sind die Klassendiagramme nur auf die öffentlichen sowie geschützten Methoden beschränkt.
 Klassen, die lediglich eine Abhängigkeit darstellen und nicht Bestandteil einer Bibliothek sind, werden nur mit ihrem Namen dargestellt.
 \elasticfigure{img/uml/uml.0}{zentrale Komponenten der Implementierung und deren Beziehungen untereinander}
+Am Ende des Kapitels werden dann die genutzten bzw. benötigten Bibliotheken beschrieben.
 
 \input{tex/classes/job}
 \input{tex/classes/extraction}
@@ -19,5 +18,6 @@ Klassen, die lediglich eine Abhängigkeit darstellen und nicht Bestandteil einer
 
 \input{tex/classes/imageprocessing}
 \input{tex/classes/improveimage}
+
 \input{tex/classes/usedlibraries}
 
