--- a/doc/tex/evaluation/zxing/intro.tex
+++ b/doc/tex/evaluation/zxing/intro.tex
@@ -1,9 +1,15 @@
 \writtenby{\dcauthornameriren}%
 In diesem Teilbereich der Evaluation wird die Bibliothek ZXing auf ihren Funktionsumfang getestet.
+Verschiedene Strichcodearten werden normal, unscharf, verdunkelt, rotiert und schattiert der Bibliothek übergeben und es wird überprüft, bis zu welchem Grad die Codes trotzdem erkannt werden.
 
-Verschiedene Strichcodearten werden normal, unscharf, verdunkelt, rotiert, schattiert, schräg und teils zerknittert der Bibliothek übergeben und es wird überprüft, bis zu welchem Grad die Codes trotzdem erkannt werden.
-
-Dabei sind die Tests auf den Strichcode EAN-13 und den in 2D aufgebauten QR-Code beschränkt, da diese eine repräsentative Menge bilden. Denn Strichcodes sind im Grunde alle ähnlich aufgebaut und haben nur eine andere Codierung oder vereinzelte Überprüfungsmechanismen, sind aber sonst gleicher Art und haben die gleichen Schwächen. Der QR-Code dagegen ist der am meisten verwendete 2D Code(etwa 88\% in 2011) und alle anderen werden kaum bzw. nur in Spezialfällen benutzt. Das geht aus einer Studie von Competitrack im Jahre 2011 über 2D Codes in der Werbung hervor.
+Dabei sind die Tests auf den Strichcode EAN-13 und den in 2D aufgebauten QR-Code beschränkt, da diese repräsentative Mengen bilden. Denn Strichcodes sind im Grunde alle ähnlich aufgebaut (siehe Figur \ref*{fig:similarcodes}) und haben nur eine andere Codierung oder vereinzelt Überprüfungsmechanismen, sind aber sonst gleicher Art und haben die gleichen Schwächen. Der QR-Code ist dafür der am meisten verwendete 2D Code(etwa 88\% in 2011) und alle anderen werden kaum bzw. nur in Spezialfällen benutzt, wie es aus einer Studie von Competitrack im Jahre 2011 über 2D Codes in der Werbung hervor geht.
 \todo{QUELLE}
 
-Außerdem soll darauf hingewiesen werden, dass diese Ergebnisse natürlich nicht vollständig sind, da sie mit unterschiedlichen Auflösungen und anderen Codes sicher etwas variieren. Diese vollständige Analyse würde aber auch den Rahmen dieser Arbeit sprengen, darum werden die benutzten Beispiele durchgängig benutzt, um mögliche Verbesserungen in der Erkennung auch mit Sicherheit feststellen zu können.
+\begin{figure}[H]
+  \centering
+  \includegraphics[height=5cm]{img/EAN13/strichcodes.jpg}
+  \caption{Verschiedene Strichcodes, weisen trotzdem die gleichen Eigenschaften auf.}
+  \label{fig:similarcodes}
+\end{figure}
+
+Die Ergebnisse sind empirisch getestet worden und ergeben einen guten Überblick über die Möglichkeiten und Einschränkungen der Strichcodeerkennung durch die ZXing Bibliothek. Die verwendeten Beispielcodes wurden durchgängig genutzt, um direkt die Unterschiede in der Erkennung sichtbar machen zu können. Die zugrunde liegenden Codes werden dabei in den Figuren \ref*{fig:eannormal}(1. und 2. Bild) und \ref*{fig:qrnormal}(1. und 3. Bild) dargestellt.
