add ref to figure in classes introduction remove redundant sentenced introduced in a previous commit

--- a/doc/tex/classes.tex
+++ b/doc/tex/classes.tex
@@ -2,11 +2,11 @@
 Dieses Kapitel widmet sich der Beschreibung der wesentlichen Aspekte der Implementierung.
 Dazu ist nicht jede einzelne Funktion aufgeführt, sondern nur die wichtigsten, die für das Verständnis der Verarbeitung erforderlich sind.
 Am Ende des Kapitels werden zudem die genutzten Bibliotheken beschrieben.
-Das hier abgebildete Diagramm zeigt die Beziehungen zwischen den zentralen Komponenten der Implementierung auf die im Folgenden einzeln eingegangen wird.
-Aus Platzgründen sind die Klassendiagramme nur auf die öffentlichen sowie geschützten Methoden beschränkt.
+
+Das Diagramm in \autoref{fig:uml0} zeigt die Beziehungen zwischen den zentralen Komponenten der Implementierung, auf die im Folgenden einzeln eingegangen wird.
+Aus Platzgründen sind die Klassendiagramme nur auf öffentliche sowie geschützte Methoden beschränkt.
 Klassen, die lediglich eine Abhängigkeit darstellen und nicht Bestandteil einer Bibliothek sind, werden nur mit ihrem Namen dargestellt.
-\elasticfigure{img/uml/uml.0}{zentrale Komponenten der Implementierung und deren Beziehungen untereinander}
-Am Ende des Kapitels werden dann die genutzten bzw. benötigten Bibliotheken beschrieben.
+\elasticfigure[fig:uml0]{img/uml/uml.0}{zentrale Komponenten der Implementierung und deren Beziehungen untereinander}
 
 \input{tex/classes/job}
 \input{tex/classes/extraction}
