remove library section under classes and move its content in the sections where appropriate

--- a/doc/tex/classes/extractor/barcodereader.tex
+++ b/doc/tex/classes/extractor/barcodereader.tex
@@ -1,5 +1,5 @@
 \subsection{Interface \code{BarcodeReader}}
-Die Funktion eines \code{BarcodeReader} liegt im lesen von Barcodes in einem Bild.
-Die Standardimplementierung \code{DefaultBarcodeReader} verwendet ZXing.
+Die Funktion eines \code{BarcodeReader} liegt im Lesen von Barcodes in einem Bild.
+Die Implementierung \code{DefaultBarcodeReader} verwendet ZXing~(siehe \autoref{par:zxing}) zum Dekodieren der Barcodes.
 \elasticfigure{img/uml/uml.147}{Klassendiagramm von \code{DefaultBarcodeReader}}
 
