--- a/doc/tex/classes/imageprocessing.tex
+++ b/doc/tex/classes/imageprocessing.tex
@@ -3,6 +3,8 @@
 Das Ziel dieser Klasse ist es, einzelne Eigenschaften von Strichcodebilder so aufzuwerten, dass der enthaltene Strichode besser von der Bibliothek ZXing erkannt werden kann.
 Zusätzlich sind auch noch einige weitere Funktionen implementiert, die teilweise andere Varianten oder einfach zusätzliche Funktionen darstellen. Auf diese wird hier aber nicht näher eingegangen, da sie keinen direkten Bezug zur aktuellen Implementation haben. Sie wurden aber nicht aus der Klasse entfernt, um die mögliche spätere Weiterentwicklung zu erleichtern.
 
+Die Bildverarbeitung erfolgt mittels ImageJ\footnote{\url{http://rsbweb.nih.gov/ij/}}, ein gemeinfreies (public domain) Bildbearbeitungsprogramm, dessen Bibliotheken ebenfalls frei nutzbar sind.
+
 \elasticfigure{img/uml/uml.127}{Klassendiagramm von \code{ImageProcessing}}
 
 \subsection*{Methode hasShade}
