fix spelling in statement of authorship

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -164,11 +164,8 @@
 
 \chapter*{Selbstständigkeitserklärung}
 
-Hiermit erklären wir, daß wir die vorliegende Arbeit
-selbstständig angefertigt, nicht anderweitig zu Prüfungszwecken vorgelegt und
-keine anderen als die angegebenen Hilfsmittel verwendet haben. Sämtliche 
-wissentlich verwendeten Textausschnitte, Zitate oder Inhalte anderer Verfasser 
-wurden ausdrücklich als solche gekennzeichnet.\\[2ex]
+Hiermit erklären wir, dass wir die vorliegende Arbeit selbstständig angefertigt, nicht anderweitig zu Prüfungszwecken vorgelegt und keine anderen als die angegebenen Hilfsmittel verwendet haben.
+Sämtliche wissentlich verwendeten Textausschnitte, Zitate oder Inhalte anderer Verfasser wurden ausdrücklich als solche gekennzeichnet.\\[2ex]
 \dcplace, den \dcdate\\[10ex]
 \begin{tabular}{p{5cm} p{5cm}}\hline
 \footnotesize \dcauthornameriren &
