--- a/doc/tex/introduction/task.tex
+++ b/doc/tex/introduction/task.tex
@@ -1,6 +1,8 @@
 \section{Aufgabenstellung}
-Die Aufgabe ist es, Strichcodes in Videostreams zu finden, zu extrahieren und zu dekodieren. Dabei soll eine Open-Source Bibliothek für die Strichcodeerkennung gefunden und genutzt werden.
-Der Stream von Bilddaten kommt dabei von einer Kamera, die durch eine Webschnittstelle angesteuert wird, aber möglicherweise sind die von dort zurückgegeben Bilder sehr dunkel und unscharf. Außerdem können die Strichcodes auf den Bildern in unterschiedlichster Verfassung sein, schattiert, rotiert, teils übermalt oder sogar über 2 Frames verteilt.
-Diese Probleme sollten Beachtung finden und später mit einem Testset von Strichcodebildern %/-videos
-überprüft werden.
+Die Aufgabe ist es, Strichcodes in Videostreams zu finden, zu extrahieren und zu dekodieren.
+Dabei soll eine Open-Source Bibliothek für die Strichcodeerkennung gefunden und genutzt werden.
+Die Bilddaten sind möglicherweise dunkel und unscharf.
+Außerdem können die Strichcodes auf den Bildern in unterschiedlichster Verfassung (schattiert, rotiert, teils übermalt oder sogar über 2 Frames verteilt) sein.
+Diese Probleme sollen Beachtung finden und später mit einem Testset von Strichcodebildern überprüft werden.
 Dabei wird erwartet, dass Code und Vorgehensweise ausführlich dokumentiert sind.
+
